# pmud

./: .caf_config  .caf_pmud  .clang-format  .clang-tidy  .gitignore  BUILD  DoxygenLayout.xml  README.md  WORKSPACE  bazel-game-cpp  caf.BUILD  clang-format-all.sh  cnl.BUILD  config.dox  doxygen-awesome.css  eigen3.BUILD  fmt.BUILD  global_copts.bzl  hiredis.BUILD  lua.BUILD  ncurses.BUILD  package-lock.json  package.json  primordia-mud.yaml  run-container.sh  run-host.sh  up.sh  yaml-cpp.BUILD  zeromq.BUILD
.devcontainer/: .bashrc  .bazelrc  .localrc  .tmux.conf  .vimrc  Dockerfile  devcontainer.json
actor/: BUILD  actor.cpp
actor-examples/: BUILD  README.md  actor.cpp  class-perf.cpp  class.cpp
doc/: events.md  references.md  roadmap.md  schema.md
graph/: BUILD  example.dot  example3.dot  example4.dot  fully-connected-20.dot  fully-connected.cpp  graph.cpp  graph.h  main.cpp  random-connected.cpp
graph/application/: BUILD  BUILD.bazel  bfs-search.cpp  dfs-search.cpp  fully-connected.cpp  matrix.cpp  random-connected.cpp  search.cpp  structure.cpp  transpose.cpp
graph/application/include/: graph.h  search_graph.h
graph/dot/: example2.dot
graph/include/: BFS.h  DFS.h  common.h  graph.h  vertex.h
graph/test/graph-create/: BUILD  graph_creation_tests.cpp
graph/test/vertex/: BUILD  vertex_tests.cpp
graph/tests/: BUILD  graph_creation_tests.cpp  graph_test.cpp  vertex_tests.cpp
life/: BUILD  BUILD.bazel  README.md  life.c
misc/: BUILD  BUILD.bazel  RedisDeleter.cpp  advent2021-01.cpp
misc/actor-examples/: BUILD
misc/advent2021/: BUILD
misc/graph/: BUILD
misc/graph/application/: BUILD  dfs-search.cpp  matrix.cpp
misc/graph/include/: BFS.h  DFS.h  common.h
misc/graph/test/graph-create/: BUILD
misc/life/: life.c
pmud/: BUILD  BUILD.bazel  README.md  main.cpp
pmud/comm/: BUILD.bazel  comm_static.h  connection.h  server.h  server_state.h  util.h
pmud/common/: BUILD.bazel  global_type_id.h  io.h  pmud_io.h  pmud_net.h  yaml_storage.h  yaml_util.h
pmud/conf/: .caf_pmud  module-forgotten-crypt.yaml  pmud.caf  primordia-mud-local.yml  primordia-mud.yaml  primordia-mud.yml  redis.conf
pmud/conf/world/: _places.yml  items.yml  monsters.yml  places.yml
pmud/conf/world/modules/: forgotten-crypt.yml
pmud/conf/world/samples/: gulf.yml  map_map.yml  map_sequence.yml
pmud/controllers/: BUILD.bazel  default_controller.h  login_controller.h
pmud/doc/: roadmap.md  schema.md
pmud/graph/application/: BUILD  fully-connected.cpp  transpose.cpp
pmud/graph/dot/: fully-connected-40.dot
pmud/graph/include/: graph.h
pmud/graph/test/graph-create/: graph_creation_tests.cpp
pmud/graph/test/vertex/: BUILD
pmud/logger/: BUILD.bazel  logger.h
pmud/player/: login_controller.h  login_coordinator.h  player.h  player_type_id.h
pmud/pnet/: BUILD.bazel  comm_static.h  command.h  connection.h  server.h  server_state.h  user_client.h  util.h
pmud/schema/: gear-schema.json  items-schema.json  monster-schema.json  monsters-schema.json  places-schema.json
pmud/scripts/: docker-redis.sh  load-redis-static.sh  load-redist-static.sh  redis-docker.sh  run.sh
pmud/scripts/redis-functions/: events.lua
pmud/src/common/: BUILD.bazel  global_type_id.h  pmud_io.h  pmud_net.h  pmud_security.h  pmud_string.h  storage_types.h  util.h
pmud/src/common/hash-library/: BUILD.bazel
pmud/src/controllers/: BUILD.bazel  command_actor.h  default_controller.h  login_controller.h  user_client.h
pmud/src/event/: BUILD.bazel  event_recorder_actor.h  event_recorder_client.h
pmud/src/player/: BUILD.bazel  player.h
pmud/src/pnet/: BUILD.bazel  comm_static.h  command.h  command_actor.h  connection.h  connection_actor.h  server.h  server_actor.h  server_state.h  user_client.h  util.h
pmud/src/storage/: BUILD.bazel  redis_storage.h  redis_stream_injestor.h  redis_types.h  storage.h  storage_actor.h  storage_types.h  yaml_storage.h
pmud/src/system/: BUILD.bazel  mud_config.h  pmud_system.h
pmud/storage/: BUILD.bazel  player_storage.h  storage.h  storage_actor.h
pmud/system/: BUILD.bazel  pmud_system.h
pmud/test/: BUILD.bazel  hash_test.cpp
pmud/test/actor/: BUILD.bazel  basic.cpp  quick_test.cpp  server_actor.cpp  storage_test.cpp
pmud/test/mocks/: BUILD.bazel  mock_storage.h
pmud/test/non-actor/: BUILD.bazel  hash_test.cpp  storage_test.cpp
primordia-mud/: BUILD  README.md  main.cpp
primordia-mud/comm/: comm_static.h  server.h  server_state.h  util.h
scripts/: deploy  deploy-pmud  gcloud  gcloud-redis-create  gcloud-redis-import  init-gcloud  life  life-host  localhost  pmud  sing
scripts/pmud/: cli-gcloud  deploy  gcloud-redis-export  gssh  run-local
src/: main.cpp
src/life/: initial-10x10.txt  life.c
util/: BENCHMARKS.md  BUILD  BUILD.bazel  README.md  UTILS.md  cli-zmq.cpp  cppversion.cpp  lambda-main.cpp  lua.cpp  math.cpp  redis-keydump.cpp  redis-stream-in.cpp  redis-stream-out.cpp  redis-streams-consumer.cpp  scratch.cpp  yaml-print.cpp  yaml-redis-loader.cpp  zeromq-client.cpp  zeromq-server.cpp
