load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@//:global_copts.bzl", "global_cppopts")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

package(features = ["-default_compile_flags"])

filegroup(
    name = "conf",
    srcs = [
        "conf/.caf_pmud",
        "conf/primordia-mud.yaml",
        "conf/redis.conf",
    ],
)

filegroup(
    name = "scripts",
    srcs = glob(["scripts/*"]),
)

filegroup(
    name = "caf_so",
    data = ["@caf//:main"],
)

filegroup(
    name = "hiredis_so",
    data = ["@hiredis//:main"],
)

cc_binary(
    name = "pmud",
    srcs = ["main.cpp"],
    copts = global_cppopts(),
    linkopts = [
        "-pthread",
        "-lstdc++fs",
    ],
    deps = [
        "//graph:library",
        "//pmud/common:library",
        "//pmud/logger:library",
        "//pmud/player:library",
        "//pmud/pnet:library",
        "//pmud/storage:library",
        "@caf//:main",
        "@fmt//:main",
        "@hiredis//:main",
        "@yaml-cpp//:main",
    ],
)

pkg_tar(
    name = "dist",
    srcs = [
        "//pmud",
        "//pmud:caf_so",
        "//pmud:conf",
        "//pmud:hiredis_so",
        "//pmud:scripts",
    ],
    extension = "tar.gz",
    include_runfiles = True,
    mode = "0755",
    package_dir = "pmud",
)
