load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@//:global_copts.bzl", "global_cppopts")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

package(features = ["-default_compile_flags"])

filegroup(
    name = "conf",
    srcs = glob([
        "conf/**",
    ]),
)

filegroup(
    name = "scripts",
    srcs = glob(["scripts/**"]),
)

filegroup(
    name = "caf_so",
    data = ["@caf//:main"],
)

filegroup(
    name = "hiredis_so",
    data = ["@hiredis//:main"],
)

cc_binary(
    name = "pmud",
    srcs = ["main.cpp"],
    copts = global_cppopts(),
    linkopts = [
        "-pthread",
        "-lstdc++fs",
    ],
    deps = [
        "//misc/graph:library",
        "//pmud/src/common:library",
        "//pmud/src/player:library",
        "//pmud/src/pnet:library",
        "//pmud/src/storage:library",
        "//pmud/src/system:library",
        "//util:redis-stream-in",
        "//util:redis-stream-out",
        "//util:yaml-print",
        "//util:yaml-redis-loader",
        "@caf//:main",
        "@fmt//:main",
        "@hiredis//:main",
        "@yaml-cpp//:main",
    ],
)

pkg_tar(
    name = "dist",
    srcs = [
        "//pmud",
        "//pmud:caf_so",
        "//pmud:conf",
        "//pmud:hiredis_so",
        "//pmud:scripts",
    ],
    extension = "tar.gz",
    include_runfiles = True,
    mode = "0755",
    package_dir = "pmud",
    remap_paths = {"pmud/_solib_k8/_U@caf_S_S_Cmain___Ulib": ""},
    strip_prefix = ".",
)
