load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@//:global_copts.bzl", "global_cppopts")

package(features = ["-default_compile_flags"])

cc_binary(
    name = "cppversion",
    srcs = ["cppversion.cpp"],
    copts = global_cppopts(),
    deps = [
        "@fmt//:main",
        "@ncurses//:main",
    ],
)

cc_binary(
    name = "scratch",
    srcs = ["scratch.cpp"],
    copts = global_cppopts(),
    deps = [
        "@fmt//:main",
        "@ncurses//:main",
    ],
)

cc_binary(
    name = "yaml-redis-loader",
    srcs = ["yaml-redis-loader.cpp"],
    copts = global_cppopts(),
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/common:library",
        "//pmud/storage:library",
        "@fmt//:main",
        "@hiredis//:main",
        "@ncurses//:main",
        "@yaml-cpp//:main",
    ],
)

cc_binary(
    name = "yaml-print",
    srcs = ["yaml-print.cpp"],
    copts = global_cppopts(),
    deps = [
        "//pmud/common:library",
        "@fmt//:main",
        "@yaml-cpp//:main",
    ],
)

cc_binary(
    name = "lua",
    srcs = ["lua.cpp"],
    copts = global_cppopts(),
    linkopts = ["-ldl"],  # lua-specific
    deps = [
        "//pmud/common:library",
        "@fmt//:main",
        "@lua//:main",
    ],
)
