load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@//:global_copts.bzl", "global_cpp2b", "global_cppopts", "global_linkopts")

package(features = ["-default_compile_flags"])

cc_binary(
    name = "cppversion",
    srcs = ["cppversion.cpp"],
    copts = global_cppopts() + global_cpp2b(),
    deps = [
        "@fmt//:main",
        "@ncurses//:main",
    ],
)

cc_binary(
    name = "scratch",
    srcs = ["scratch.cpp"],
    copts = global_cppopts(),
    deps = [
        "@fmt//:main",
        "@ncurses//:main",
    ],
)

cc_binary(
    name = "yaml-redis-loader",
    srcs = ["yaml-redis-loader.cpp"],
    copts = global_cppopts(),
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/src/common:library",
        "//pmud/src/storage:library",
        "@fmt//:main",
        "@hiredis//:main",
        "@ncurses//:main",
        "@yaml-cpp//:main",
    ],
)

cc_binary(
    name = "yaml-print",
    srcs = ["yaml-print.cpp"],
    copts = global_cppopts(),
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/src/common:library",
        "@fmt//:main",
        "@yaml-cpp//:main",
    ],
)

cc_binary(
    name = "lua",
    srcs = ["lua.cpp"],
    copts = global_cppopts(),
    linkopts = ["-ldl"],  # lua-specific
    deps = [
        "//pmud/src/common:library",
        "@fmt//:main",
        "@lua//:main",
    ],
)

cc_binary(
    name = "redis-stream-out",
    srcs = ["redis-stream-out.cpp"],
    copts = global_cppopts() + global_cpp2b() + ["-Wno-stringop-overflow"],
    linkopts = [
        "-ldl",
        "-pthread",
        "-lstdc++fs",
    ],  # lua-specific
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/src/common:library",
        "//pmud/src/storage:library",
        "@fmt//:main",
        "@hiredis//:main",
        "@lua//:main",
    ],
)

cc_binary(
    name = "redis-stream-in",
    srcs = ["redis-stream-in.cpp"],
    copts = global_cppopts() + global_cpp2b() + ["-Wno-stringop-overflow"],
    linkopts = ["-ldl"],  # lua-specific
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/src/common:library",
        "//pmud/src/storage:library",
        "@fmt//:main",
        "@hiredis//:main",
        "@lua//:main",
    ],
)

cc_binary(
    name = "zeromq-server",
    srcs = ["zeromq-server.cpp"],
    copts = global_cppopts(),
    linkopts = [
        "-ldl",
        "-lzmq",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@zeromq//:main",
    ],
)

cc_binary(
    name = "zeromq-client",
    srcs = ["zeromq-client.cpp"],
    copts = global_cppopts(),
    linkopts = [
        "-ldl",
        "-lzmq",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@zeromq//:main",
    ],
)

cc_binary(
    name = "redis-keydump",
    srcs = ["redis-keydump.cpp"],
    copts = global_cppopts(),
    linkopts = global_linkopts(),
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/src/common:library",
        "//pmud/src/storage:library",
        "@fmt//:main",
        "@hiredis//:main",
        "@lua//:main",
    ],
)

cc_binary(
    name = "cli-zmq",
    srcs = ["cli-zmq.cpp"],
    copts = global_cppopts(),
    linkopts = global_linkopts(),
    visibility = ["//visibility:public"],
    deps = [
        "@fmt//:main",
        "@zeromq//:main",
    ],
)

cc_binary(
    name = "lambda-main",
    srcs = ["lambda-main.cpp"],
    copts = global_cppopts() + global_cpp2b(),
    linkopts = global_linkopts(),
    visibility = ["//visibility:public"],
    deps = [
        "@fmt//:main",
    ],
)
