load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "graph",
    hdrs = ["include/graph.h"],
    deps = ["@ncurses//:main"],
    strip_include_prefix = "include",
)

cc_binary(
    name = "random-connected",
    srcs = ["random-connected.cpp"],
    deps = ["graph"],
    copts = ["-std=c++20"],
)

cc_binary(
    name = "fully-connected",
    srcs = ["fully-connected.cpp"],
    deps = ["graph"],
    copts = ["-std=c++20"],
)

cc_binary(
    name = "structure",
    srcs = ["structure.cpp"],
    deps = ["graph"],
    copts = ["-std=c++20"],
)

cc_binary(
    name = "matrix",
    srcs = ["matrix.cpp"],
    deps = ["graph"],
    copts = ["-std=c++20"],
)