load("@rules_cc//cc:defs.bzl", "cc_library")
load("@//:global_copts.bzl", "global_cppopts", "global_linkopts")

cc_library(
    name = "library",
    hdrs = [
        "global_type_id.h",
        "pmud_io.h",
        "pmud_security.h",
        "pmud_string.h",
        "util.h",
        "yaml_util.h",
    ],
    copts = global_cppopts(),
    linkopts = global_linkopts(),
    strip_include_prefix = "//pmud/src/",
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/src/common/hash-library:brumme-hash",
        "@caf//:main",
        "@fmt//:main",
    ],
)
