load("@rules_cc//cc:defs.bzl", "cc_library")
load("@//:global_copts.bzl", "global_cppopts", "global_linkopts")

cc_library(
    name = "library",
    hdrs = glob(["*.h"]),
    copts = global_cppopts(),
    linkopts = global_linkopts(),
    strip_include_prefix = "//pmud/src",
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/src/common:library",
        "//pmud/src/storage:library",
        "//pmud/src/system:library",
    ],
)
