load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "library",
    hdrs = glob(["*.h"]),
    strip_include_prefix = "//pmud/src",
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/src/common:library",
        "//pmud/src/controllers:library",
        "//pmud/src/system:library",
    ],
)
