load("@rules_cc//cc:defs.bzl", "cc_library")
load("@//:global_copts.bzl", "global_cppopts", "global_linkopts")

cc_library(
    name = "library",
    hdrs = [
        "redis_storage.h",
        "redis_stream_injestor.h",
        "redis_types.h",
        "storage.h",
        "storage_actor.h",
        "yaml_storage.h",
    ],
    copts = global_cppopts(),
    linkopts = global_linkopts(),
    strip_include_prefix = "//pmud/src",
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/src/common:library",
        "//pmud/src/system:library",
        "@caf//:main",
        "@fmt//:main",
        "@hiredis//:main",
        "@yaml-cpp//:main",
    ],
)
