load("@rules_cc//cc:defs.bzl", "cc_test")
load("@//:global_copts.bzl", "global_cppopts", "global_linkopts")

cc_test(
    name = "basic-test",
    srcs = ["basic.cpp"],
    copts = global_cppopts(),
    linkopts = global_linkopts(),
    visibility = ["//visibility:public"],
    deps = [
        "@caf//:main",
    ],
)

# cc_test(
#     name = "storage-test",
#     srcs = ["storage_test.cpp"],
#     copts = global_cppopts(),
#     linkopts = global_linkopts(),
#     visibility = ["//visibility:public"],
#     deps = [
#         "//pmud/src/common:library",
#         "//pmud/src/storage:library",
#         "//pmud/test/mocks:library",
#         "@caf//:main",
#     ],
# )

# cc_test(
#     name = "quick-test",
#     srcs = ["quick_test.cpp"],
#     copts = global_cppopts(),
#     linkopts = global_linkopts(),
#     visibility = ["//visibility:public"],
#     deps = [
#         # "//pmud/src/common:library",
#         # "//pmud/src/storage:library",
#         # "//pmud/test/mocks:library",
#         "@caf//:main",
#     ],
# )
