load("@rules_cc//cc:defs.bzl", "cc_test")
load("@//:global_copts.bzl", "global_cppopts", "global_linkopts")

cc_test(
    name = "hash-test",
    srcs = ["hash_test.cpp"],
    copts = global_cppopts(),
    linkopts = global_linkopts(),
    visibility = ["//visibility:public"],
    deps = [
        "//pmud/src/common:library",
        "//pmud/src/common/hash-library:brumme-hash",
        "@com_google_googletest//:gtest_main",
    ],
)
